Fixed text color on mobile slideshow in lightmode

--- a/styles/scss/components/slideshow.scss
+++ b/styles/scss/components/slideshow.scss
@@ -27,6 +27,10 @@
         div{
             position: absolute;
             display: inline-block;
+            
+            a{
+                color: white;
+            }
         }
     }
 
